# BooksToScrape-Scrapy

./: .gitignore  README.md  pyproject.toml
bookscape/: scrapy.cfg
bookscape/bookscape/: items.py  middlewares.py  pipelines.py  settings.py
bookscape/bookscape/spiders/: books.py
